# trt_batched_nms

./: CMakeLists.txt  README.md  package.xml
include/trt_batched_nms/: trt_plugin_base.hpp  trt_plugin_helper.hpp  trt_serialize.hpp
include/trt_batched_nms/nms/: batched_nms_kernel.hpp  cub_helper.h  kernel.h
src/: trt_batched_nms.cpp  trt_batched_nms.hpp
src/nms/: allClassNMS.cu  batched_nms_kernel.cpp  gatherNMSOutputs.cu  kernel.cu  permuteData.cu  sortScoresPerClass.cu  sortScoresPerImage.cu
