<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trt_batched_nms</name>
  <version>0.0.0</version>
  <description>ROS 2 package for TensorRT batched NMS plugin</description>
  <maintainer email="baris@leodrive.ai">Barış Zeren</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>cudnn_cmake_module</buildtool_depend>
  <buildtool_depend>tensorrt_cmake_module</buildtool_depend>

  <buildtool_export_depend>cudnn_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>tensorrt_cmake_module</buildtool_export_depend>

  <depend>cuda_utils</depend>
  <depend>tensorrt_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
